--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "webpack -w --config config/webpack/webpack.config.js & nodemon --inspect build/server.js",
+    "start": "node scripts/start.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -24,9 +24,13 @@
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
-    "nodemon": "^1.12.5",
+    "chalk": "^3.0.0",
+    "nodemon": "^2.0.2",
+    "rimraf": "^3.0.0",
     "webpack": "^4.41.4",
     "webpack-cli": "^3.3.10",
+    "webpack-dev-middleware": "^3.7.2",
+    "webpack-hot-middleware": "^2.25.0",
     "webpack-node-externals": "^1.6.0"
   },
   "dependencies": {
