--- a/package.json
+++ b/package.json
@@ -39,7 +39,11 @@
     "isomorphic-fetch": "^2.2.1",
     "react": "^16.3.0",
     "react-dom": "^16.3.0",
+    "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
+    "redux": "^4.0.5",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0",
     "serialize-javascript": "^1.4.0"
   }
 }
